# Shin2chin

./: .gitignore  CLAUDE.md  FOUNDATIONAL_PROMPT_TEMPLATE.md  FOUNDATION_PROMPT.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  archive-docs.bat  changelog.md  claude.md  hardhat.config.js  install-solana-admin.ps1  install-solana-user.ps1  install-solana.ps1  package-lock.json  package.json  plan.md  session-start.md  task-execution.md  test-files.txt  testing.md
.cursor/: mcp.json
contracts/: Shin2Chin.sol
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  ENVIRONMENT_TROUBLESHOOTING_GUIDE.md  ENVIRONMENT_VERIFICATION_COMPLETE.md  FOUNDATION_SPRINT_SUMMARY.md  README.md  (+11 more)
shin2chin-solana/archive/old-implementation/: Cargo.toml
shin2chin-solana/archive/old-implementation/src/: lib.rs  state.rs
shin2chin-solana/programs/oracle/: Cargo.toml
shin2chin-solana/programs/oracle/src/: errors.rs  lib.rs  state.rs
shin2chin-solana/programs/oracle/src/instructions/: mod.rs  register_oracle.rs  submit_result.rs
shin2chin-solana/programs/shin2chin_betting/: Cargo.toml
shin2chin-solana/programs/shin2chin_betting/src/: constants.rs  errors.rs  lib.rs
shin2chin-solana/programs/shin2chin_betting/src/instructions/: create_event.rs  mod.rs  place_bet.rs
shin2chin-solana/programs/shin2chin_betting/src/state/: bet.rs  enums.rs  event.rs  mod.rs
shin2chin-solana/programs/shin2chin_pool/: Anchor.toml  Cargo.toml
shin2chin-solana/programs/shin2chin_pool/src/: errors.rs  lib.rs
shin2chin-solana/programs/shin2chin_pool/src/instructions/: auto_balance.rs  claim_winnings.rs  initialize_event.rs  mod.rs  place_bet.rs  settle_event.rs
shin2chin-solana/programs/shin2chin_pool/src/state/: bet.rs  enums.rs  event.rs
(+122 files in other folders)
