[package]
name = "shin2chin-oracle"
version = "0.1.0"
description = "Oracle program for Shin2Chin betting platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16.0"

[dev-dependencies]
anchor-spl = "0.28.0"