[package]
name = "shin2chin_betting"
version = "0.1.0"
description = "Shin2Chin Solana Betting Program - Phase A Foundation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shin2chin_betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"