[package]
name = "shin2chin_pool"
version = "0.1.0"
description = "Auto-balancing pool betting system for Shin2Chin"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shin2chin_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"